<resources>
    <string name="app_name">Lokal.in</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
</resources>