<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/baseline_format_list_bulleted_24"
        android:title="@string/categories" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/wishlist"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>

</menu>